add refs, figs etc

--- a/qft-geometry.bib
+++ b/qft-geometry.bib
@@ -1,5 +1,4 @@
-% This file was created with JabRef 2.10.
-% Encoding: ISO8859_1
+% Encoding: ISO-8859-1
 
 
 @Book{MR1079726,
@@ -159,3 +158,136 @@
   Timestamp                = {2017.08.26}
 }
 
+@Book{Bender1999,
+  title     = {Advanced mathematical methods for scientists and engineers. {I}},
+  publisher = {Springer-Verlag, New York},
+  year      = {1999},
+  author    = {Bender, Carl M. and Orszag, Steven A.},
+  isbn      = {0-387-98931-5},
+  note      = {Asymptotic methods and perturbation theory, Reprint of the 1978 original},
+  doi       = {10.1007/978-1-4757-3069-2},
+  keywords  = {34Exx (00A06 35-01 35-02 65-06)},
+  mrnumber  = {1721985},
+  pages     = {xiv+593},
+}
+
+@Article{Freed1992,
+  author       = {Daniel S. Freed},
+  title        = {Classical Chern-Simons theory, Part 1},
+  abstract     = {There is a large mathematical literature on classical mechanics and field theory, especially on the relationship to symplectic geometry. One might think that the classical Chern-Simons theory, which is topological and so has vanishing hamiltonian, is completely trivial. However, this theory exhibits interesting geometry that is usually absent from ordinary field theories. (The same is true on the quantum level; topological quantum field theories exhibit geometric properties not usually seen in ordinary quantum field theories, and they lack analytic properties which are usually seen.) In this paper we carefully develop this geometry. Of particular interest are the line bundles with connection over the moduli space of flat connections on a 2-manifold. We extend the usual theory to cover 2-manifolds with boundary. We carefully develop ``gluing laws'' in all of our constructions, including the line bundle with connection over moduli space. The corresponding quantum gluing laws are fundamental. Part 1 covers connected and simply connected gauge groups; Part 2 will cover arbitrary compact Lie groups.},
+  date         = {1992-06-04},
+  eprint       = {hep-th/9206021v1},
+  eprintclass  = {hep-th},
+  eprinttype   = {arXiv},
+  file         = {online:http\://arxiv.org/pdf/hep-th/9206021v1:PDF},
+  journaltitle = {Adv.Math. 113 (1995) 237-303},
+  keywords     = {hep-th, math.QA},
+}
+
+@Book{Kobayashi1996a,
+  title     = {Foundations of differential geometry. {V}ol. {I}},
+  publisher = {John Wiley \& Sons, Inc., New York},
+  year      = {1996},
+  author    = {Kobayashi, Shoshichi and Nomizu, Katsumi},
+  series    = {Wiley Classics Library},
+  isbn      = {0-471-15733-3},
+  note      = {Reprint of the 1963 original, A Wiley-Interscience Publication},
+  keywords  = {53-01},
+  mrnumber  = {1393940},
+  pages     = {xii+329},
+}
+
+@InCollection{Deligne1999b,
+  author    = {Deligne, Pierre and Morgan, John W.},
+  title     = {Notes on supersymmetry (following {J}oseph {B}ernstein)},
+  booktitle = {Quantum fields and strings: a course for mathematicians, {V}ol. 1, 2 ({P}rinceton, {NJ}, 1996/1997)},
+  publisher = {Amer. Math. Soc., Providence, RI},
+  year      = {1999},
+  pages     = {41--97},
+  keywords  = {58A50 (14M30 32C11 58C50)},
+  mrnumber  = {1701597},
+}
+
+@Article{Zakharevich2017,
+  author      = {Valentin Zakharevich},
+  title       = {Localization and Stationary Phase Approximation on Supermanifolds},
+  abstract    = {Given an odd vector field $Q$ on a supermanifold $M$ and a $Q$-invariant density $\mu$ on $M$, under certain compactness conditions on $Q$, the value of the integral $\int_{M}\mu$ is determined by the value of $\mu$ on any neighborhood of the vanishing locus $N$ of $Q$. We present a formula for the integral in the case where $N$ is a subsupermanifold which is appropriately non-degenerate with respect to $Q$. In the process, we discuss the linear algebra necessary to express our result in a coordinate independent way. We also extend stationary phase approximation and the Morse-Bott Lemma to supermanifolds.},
+  date        = {2017-01-05},
+  doi         = {10.1063/1.5000042},
+  eprint      = {1701.01183v1},
+  eprintclass = {math.DG},
+  eprinttype  = {arXiv},
+  file        = {online:http\://arxiv.org/pdf/1701.01183v1:PDF},
+  keywords    = {math.DG, math-ph, math.MP, 58A50},
+}
+
+@Article{Witten2012,
+  author        = {Edward Witten},
+  title         = {Notes On Supermanifolds and Integration},
+  __markedentry = {[andy:]},
+  abstract      = {These are notes on the theory of supermanifolds and integration on them, aiming to collect results that are useful for a better understanding of superstring perturbation theory in the RNS formalism.},
+  date          = {2012-09-11},
+  eprint        = {1209.2199v3},
+  eprintclass   = {hep-th},
+  eprinttype    = {arXiv},
+  file          = {online:http\://arxiv.org/pdf/1209.2199v3:PDF},
+  keywords      = {hep-th, math.DG},
+}
+
+@Proceedings{Vafa2001,
+  title         = {Winter {S}chool on {M}irror {S}ymmetry, {V}ector {B}undles and {L}agrangian {S}ubmanifolds},
+  year          = {2001},
+  editor        = {Vafa, Cumrun and Yau, S.-T.},
+  volume        = {23},
+  series        = {AMS/IP Studies in Advanced Mathematics},
+  publisher     = {American Mathematical Society, Providence, RI; International Press, Somerville, MA},
+  isbn          = {0-8218-2159-8},
+  __markedentry = {[andy:6]},
+  booktitle     = {Proceedings of the school held at {H}arvard {U}niversity, {C}ambridge, {MA}, {J}anuary 1999},
+  keywords      = {00B25 (14-06 32-06 53-06)},
+  mrnumber      = {1876062},
+  pages         = {x+377},
+}
+
+@Book{MR2003030,
+  title      = {Mirror symmetry},
+  publisher  = {American Mathematical Society, Providence, RI; Clay Mathematics Institute, Cambridge, MA},
+  year       = {2003},
+  author     = {Hori, Kentaro and Katz, Sheldon and Klemm, Albrecht and Pandharipande, Rahul and Thomas, Richard and Vafa, Cumrun and Vakil, Ravi and Zaslow, Eric},
+  volume     = {1},
+  series     = {Clay Mathematics Monographs},
+  isbn       = {0-8218-2955-6},
+  note       = {With a preface by Vafa},
+  mrclass    = {14J32 (14N35 32Q25 81T30 81T60)},
+  mrnumber   = {2003030},
+  mrreviewer = {Marcos Mari\~no},
+  pages      = {xx+929},
+}
+
+@Online{etingof,
+  author       = {Pavel Etingof},
+  title        = {Geometry and Quantum Field Theory},
+  year         = {2002},
+  addendum     = {License: Creative Commons BY-NC-SA},
+  organization = {Massachusetts Institute of Technology: MIT OpenCourseWare},
+  url          = {https://ocw.mit.edu},
+}
+
+@Article{MR674406,
+  author     = {Duistermaat, J. J. and Heckman, G. J.},
+  title      = {On the variation in the cohomology of the symplectic form of the reduced phase space},
+  journal    = {Invent. Math.},
+  year       = {1982},
+  volume     = {69},
+  number     = {2},
+  pages      = {259--268},
+  issn       = {0020-9910},
+  doi        = {10.1007/BF01399506},
+  fjournal   = {Inventiones Mathematicae},
+  mrclass    = {58F05 (58G15)},
+  mrnumber   = {674406},
+  mrreviewer = {A. Verona},
+  url        = {http://dx.doi.org/10.1007/BF01399506},
+}
+
+@Comment{jabref-meta: databaseType:bibtex;}
